# simple_video_processor

./: .gitignore  readme.md
spec/: main_spec.tex
spec/ff_wrapper/: ffw_spec.tex
spec/simple_video_processor/: svp_spec.tex
src/: CMakeLists.txt  CMakePresets.json
src/ff_wrapper/codec/: codec_base.cpp  codec_base.h  codec_properties.cpp  codec_properties.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h
src/ff_wrapper/data/: frame.cpp  frame.h  packet.cpp  packet.h
src/ff_wrapper/formats/: demuxer.cpp  demuxer.h  media_base.cpp  media_base.h  media_file_base.cpp  media_file_base.h  muxer.cpp  muxer.h  stream.cpp  stream.h
src/ff_wrapper/swr/: audio_resampler.cpp  audio_resampler.h
src/ff_wrapper/sws/: frame_transformer.cpp  frame_transformer.h
src/ff_wrapper/util/: audio_fifo_buffer.cpp  audio_fifo_buffer.h  channel_layout.cpp  channel_layout.h  dict.cpp  dict.h  ff_helpers.cpp  ff_helpers.h  ff_math.h  ff_math_helpers.h  ff_object.cpp  ff_object.h  ff_time.cpp  ff_time.h  util.h
src/test/: test_util.h
src/test/ff_wrapper/: test_decoder.cpp  test_demuxer.cpp  test_dict.cpp  test_encoder.cpp  test_ff_object.cpp  test_frame.cpp  test_frame_transformer.cpp  test_muxer.cpp  test_packet.cpp  test_rational.cpp  test_time.cpp
